# smelter-crash

./: CRASH_EXPLAINATION.md  Cargo.toml  README.md
mallinfo-override/: Cargo.toml
mallinfo-override/src/: lib.rs
src/: args.rs  input.rs  main.rs  memory_monitor.rs  output.rs  ram.rs  runner.rs
